syntax = "proto3";

package llm;

service LLM {
  // Appel simple (une requête -> une réponse)
  rpc Generate(GenerateRequest) returns (GenerateReply);

  // Streaming serveur (une requête -> flux de tokens)
  rpc GenerateStream(GenerateRequest) returns (stream TokenChunk);
}

message GenerateRequest {
  string prompt = 1;
  map<string, string> params = 2; // temperature, max_tokens, etc.
}

message GenerateReply {
  string text = 1;
}

message TokenChunk {
  string token = 1;
  bool is_final = 2;
}
